--- a/rof/src/app/start-screen/start-screen.component.html
+++ b/rof/src/app/start-screen/start-screen.component.html
@@ -1,1 +1,7 @@
-<p>start-screen works!</p>
+<div class="start-screen">
+    <img src="./assets/img/game/startbox.png" alt="ringoffire">
+
+    <div class="start-label-box">
+        <img src="./assets/img/game/startlabel.png" alt="start_btn">
+    </div>
+</div>
