--- a/rof/src/mixin.scss
+++ b/rof/src/mixin.scss
@@ -1,3 +1,11 @@
-@mixin displayFlex() {
-    
+@mixin dFlex($f: flex, $c: center, $ai: none, $fd: none) {
+    display: $f;
+    justify-content: $c;
+    align-items: $ai;
+    flex-direction: $fd;
+}
+
+@mixin elementSize() {
+    width: 100%;
+    height: 100%;
 }
