added card stack

--- a/rof/src/app/start-screen/start-screen.component.html
+++ b/rof/src/app/start-screen/start-screen.component.html
@@ -2,6 +2,6 @@
     <img src="./assets/img/game/startbox.png" alt="ringoffire">
 
     <div class="start-label-box">
-        <img src="./assets/img/game/startlabel.png" alt="start_btn">
+        <img (click)="newGame()" src="./assets/img/game/startlabel.png" alt="start_btn">
     </div>
 </div>
