--- a/rof/src/app/start-screen/start-screen.component.scss
+++ b/rof/src/app/start-screen/start-screen.component.scss
@@ -2,8 +2,7 @@
 
 .start-screen {
     background-color: #404040;
-    max-width: 100%;
-    @include elementSize();
+    @include elementSize($mw: 100%);
     @include dFlex($f: flex, $c: center, $ai: center, $fd: none);
 
     >img {
