--- a/rof/src/mixin.scss
+++ b/rof/src/mixin.scss
@@ -5,7 +5,8 @@
     flex-direction: $fd;
 }
 
-@mixin elementSize() {
-    width: 100%;
-    height: 100%;
+@mixin elementSize($w: none, $h: none, $mw: none) {
+    width: $w;
+    height: $h;
+    max-width: $mw;
 }
