--- a/rof/src/app/game/game.component.scss
+++ b/rof/src/app/game/game.component.scss
@@ -16,16 +16,26 @@
     }
 }
 
-.top-card {
-    cursor: pointer;
-    transition: all 125ms ease-in-out;
+.pick-card {
+    animation: pick-card-animation 1s ease-in-out;
+    transform: scale(1.3) translateX(220px) translateY(-250px) rotate(10deg);
 
-    &:hover {
-        transform: scale(1.2) translateY(-10px);
-    }
 }
 
-.pick-card {
-    transition: all 125ms ease-in-out;
-    transform: scale(1.5) !important;
+@keyframes pick-card-animation {
+    0% {
+        transform: scale(1);
+    }
+
+    40% {
+        transform: scale(1.7);
+    }
+
+    60% {
+        transform: scale(1.7);
+    }
+
+    100% {
+        transform: scale(1.3) translateX(220px) translateY(-250px) rotate(10deg);
+    }
 }
