--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -4,6 +4,6 @@
             src="/assets/img/cards/card_cover.png" alt="">
         <img (click)="takeCard()" style="right: 25px" src="/assets/img/cards/card_cover.png" alt="">
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px"
-            src="/assets/img/cards/spade_1.png" alt="">
+            src="/assets/img/cards/{{ currentCard }}.png" alt="">
     </div>
 </div>
