--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -5,5 +5,6 @@
         <img (click)="takeCard()" style="right: 25px" src="/assets/img/cards/card_cover.png" alt="">
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px"
             src="/assets/img/cards/{{ currentCard }}.png" alt="">
+        <img *ngFor="let card of game.playedCard" src="/assets/img/cards/{{ card }}.png" alt="">
     </div>
 </div>
