played card stack shows now last played card

--- a/rof/src/app/game/game.component.scss
+++ b/rof/src/app/game/game.component.scss
@@ -16,6 +16,12 @@
     }
 }
 
+.played-card {
+    top: 50px;
+    right: 25px;
+    transform: scale(1.3) translateX(220px) translateY(-250px) rotate(10deg);
+}
+
 .pick-card {
     animation: pick-card-animation 1s ease-in-out;
     transform: scale(1.3) translateX(220px) translateY(-250px) rotate(10deg);
