edited player component html

--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -1,3 +1,5 @@
+<app-player></app-player>
+
 <div class="field">
     <div class="card-stack">
         <img [ngStyle]="{'right.px': i * 5}" *ngFor="let c of [0,1,2,3]; let i = index;"
