--- a/rof/src/app/player/player.component.html
+++ b/rof/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player">
-    <img src="/assets/img/profile/1.webp" alt="">
+    <img src="/assets/img/players/1.webp" alt="">
     Name
 </div>
