--- a/rof/src/app/game/game.component.scss
+++ b/rof/src/app/game/game.component.scss
@@ -45,3 +45,8 @@
         transform: scale(1.3) translateX(220px) translateY(-250px) rotate(10deg);
     }
 }
+
+.player-position {
+    position: absolute;
+    right: 0;
+}
