--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<app-player style="top: 100px" class="player-position"></app-player>
+<app-player *ngFor="let player of game.players" style="top: 100px" class="player-position"></app-player>
 
 <div class="field">
     <div class="card-stack">
