--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -1,4 +1,7 @@
-<app-player *ngFor="let player of game.players" style="top: 100px" class="player-position"></app-player>
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 140)}"
+    [name]="player"
+    class="player-position">
+</app-player>
 
 <div class="field">
     <div class="card-stack">
