--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -17,7 +17,6 @@
     </div>
 </div>
 
-<div><h1>hello</h1></div>
 <button mat-fab aria-label="Example icon button with a delete icon">
-    <mat-icon>delete</mat-icon>
+    <mat-icon>add</mat-icon>
 </button>
