added openDialog function

--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -17,6 +17,6 @@
     </div>
 </div>
 
-<button mat-fab color="primary" class="btn-add">
+<button (click)="openDialog()" mat-fab color="primary" class="btn-add">
     <mat-icon>add</mat-icon>
 </button>
