--- a/rof/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/rof/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>Add new player</h2>
 
 <mat-dialog-content>
-    <p>Please enter name of player</p>
     <mat-form-field>
+        <p>Please enter the name of a player</p>
         <mat-label>Name</mat-label>
         <input matInput [(ngModel)]="name" />
     </mat-form-field>
@@ -10,5 +10,5 @@
 
 <mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
+    <button mat-button [mat-dialog-close]="name" cdkFocusInitial>Ok</button>
 </mat-dialog-actions>
