added current player active boolean

--- a/rof/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/rof/src/app/dialog-add-player/dialog-add-player.component.html
@@ -2,7 +2,7 @@
 
 <mat-dialog-content>
     <mat-form-field>
-        <p>Please enter the name of a player</p>
+        <p class="dialog-txt">Please enter the name of a player</p>
         <mat-label>Name</mat-label>
         <input matInput [(ngModel)]="name" />
     </mat-form-field>
