--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -1,5 +1,5 @@
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 140)}" [name]="player"
-    class="player-position">
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 80)}"
+    [playerActive]="i == game.currentPlayer" [name]="player" class="player-position">
 </app-player>
 
 <div class="field">
