--- a/rof/src/app/player/player.component.scss
+++ b/rof/src/app/player/player.component.scss
@@ -3,13 +3,13 @@
 .player {
     @include dFlex($c: none, $ai: center);
     @include elementSize($w: 300px, $h: 55px);
-    background-color: orange;
+    background-color: rgb(50, 50, 50, 0.8);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
 
     >span {
         font-size: 32px;
-        margin-left: 16px;  
+        margin-left: 16px;
     }
 
     >img {
@@ -18,6 +18,8 @@
         border-radius: 100%;
         margin-left: 10px;
     }
+}
 
-    border-width: 10px;
+.player-active {
+    background-color: orange !important;
 }
