--- a/rof/src/app/game-info/game-info.component.html
+++ b/rof/src/app/game-info/game-info.component.html
@@ -1,1 +1,4 @@
-<p>game-info works!</p>
+<mat-card appearance="outlined">
+    <mat-card-title class="info-card-titel">Titel</mat-card-title>
+    <mat-card-content>Simple card</mat-card-content>
+</mat-card>
