finished game info card

--- a/rof/src/app/game-info/game-info.component.html
+++ b/rof/src/app/game-info/game-info.component.html
@@ -1,4 +1,4 @@
 <mat-card appearance="outlined">
-    <mat-card-title class="info-card-titel">Titel</mat-card-title>
-    <mat-card-content>Simple card</mat-card-content>
+    <mat-card-title class="info-card-titel">{{ title }}</mat-card-title>
+    <mat-card-content>{{ description }}</mat-card-content>
 </mat-card>
