--- a/rof/src/app/player/player.component.html
+++ b/rof/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
-    <img src="/assets/img/players/1.webp" alt="">
+    <img src="assets/img/players/1.webp" alt="">
     <span>{{ name }}</span>
 </div> 
