first playable version

--- a/rof/src/app/game/game.component.html
+++ b/rof/src/app/game/game.component.html
@@ -3,6 +3,7 @@
 </app-player>
 
 <div class="field">
+    <img class="background-img" src="assets/img/game/board.jpg" alt="Board">
     <div class="card-stack">
         <img [ngStyle]="{'right.px': i * 5}" *ngFor="let c of [0,1,2,3]; let i = index;"
             src="assets/img/cards/card_cover.png" alt="">
