--- a/rof/src/app/game/game.component.scss
+++ b/rof/src/app/game/game.component.scss
@@ -3,9 +3,19 @@
 .field {
     @include dFlex($f: flex, $c: center, $ai: center);
     @include elementSize($w: 100vw, $h: 100vh, $mw: 100%);
-    background-image: url('../../../assets/img/game/board.jpg');
-    background-size: cover;
-}
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .background-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
 
 .card-stack {
     position: relative;
