--- a/rof/src/app/app.component.html
+++ b/rof/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<ul>
+    @for (item of items$ | async; track item) {
+      <li>{{ item.name }}</li>
+    }
+  </ul>
