--- a/rof/src/app/app.component.html
+++ b/rof/src/app/app.component.html
@@ -1,5 +1,7 @@
+<router-outlet></router-outlet>
+
 <ul>
-    @for (item of items$ | async; track item) {
-      <li>{{ item.name }}</li>
-    }
-  </ul>
+    <li *ngFor="let item of items$ | async; trackBy: trackById">
+        {{ item.name }}
+    </li>
+</ul>
